Squashing Bugs

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -592,7 +592,7 @@ input {
         justify-content: center;
         align-content: space-around;
         padding: 0% 0%;
-        background-image: url(./images/ibrahimfrontmobile.png);
+        background-image: url(../images/ibrahimfrontmobile.png);
         background-position: 50%;
         background-repeat: no-repeat;
         background-size: cover;
@@ -660,7 +660,7 @@ input {
         justify-content: center;
         align-content: space-around;
         padding: 0% 0%;
-        background-image: url(/images/ibrahimfrontmobile.png);
+        background-image: url(../images/ibrahimfrontmobile.png);
         background-position: 50%;
         background-repeat: no-repeat;
         background-size: cover;
@@ -732,7 +732,7 @@ input {
   font-weight: unset;
   position: relative;
   gap: 25px;
-  background-image: url(./images/bg.webp);
+  background-image: url(../images/bg.webp);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
